Revision history for Perl extension Coro.

0.95 Fri Dec 12 20:50:57 CET 2003
	- removed Coro::State::flush, implemented a new and much
          faster caching mechanism by attaching magic to the CV.
        - a memleak with (real) closures remains.

0.9  Sun Nov 23 04:32:39 CET 2003
	- fix a few very hard to track down but (of course) stupid
          memory leaks.
        - stringify version number to avoid locale problems :(.
        - perl 5.9.0 does not have SvPADBUSY, reported by Scott Walters,
          hopefully ignoring it "just works".

0.8   Wed Nov  5 19:38:40 CET 2003
	- port to perl5.005_03, but only 5.8.x+ is supported!
	- honor LocalAddr even without LocalPort in Coro::Socket.

0.7   Tue May 27 03:12:38 CEST 2003
        - the version jump indicates some level of testing, not gobs
          of new features.
	- uh... I found the prompt function in ExtUtils::MakeMaker.
          Highly correct stuff, that is...
        - fixed(?) a bug with die's in coroutines causing "panic: top_env".
          the fix is not well understood by the author, so beware :(.

0.652 Thu May  8 02:54:46 CEST 2003
	- Applied patch by Slaven Rezic to set default to "s" on FreeBSD,
          cause version 4 doesn't have ucontext.
	- Benjamin Reed reported that setjmp works fine on darwin,
          so preselect it.

0.651 Sat Mar 29 15:00:23 CET 2003
	- fix a bug in Coro::Handle where some bytes could get lost
          on reading, reported by jason@nichego.net.

0.65  Sun Mar 23 00:08:26 CET 2003
	- added a README.linux-glibc.
        - new module Coro::Select.
        - also save/restore PL_comppad, fixes segfaults with 5.8.1.
          (I never claimed that I know what I am doing ;).
        - set default to setjmp/longjmp on non-x86-linux.

0.6   Thu Nov 21 11:09:06 CET 2002
        - made lazy context switching the default.
	- fixed the bug where SemaphoreSet::guard
          was the same as timed_guard and timed_guard was missing.
        - fix a memleak in Coro::Timer.